--- a/HybridEncryptionLogin/ClientApp/public/index.html
+++ b/HybridEncryptionLogin/ClientApp/public/index.html
@@ -37,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jsencrypt/2.3.1/jsencrypt.min.js"></script>
   </body>
 </html>
